2010-10-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/ascii-xfr.c: check_answer: Cleanup.
	  Thanks Kjell M. Myksvoll.

	* src/ascii-xfr.c: lineout: change to use explicit length info
	  instead of strlen, makes storing data with included '\0' work.
	  Thanks Kjell M. Myksvoll.

2010-09-11  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/vt100.c: remove 'break' in ESC[u handling which should
	  not have been there. 

2010-07-19  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c, src/minicom.c, src/minicom.h: Handle device
	  reconnects more smoothly by reopening a closed device
	  (USB-serial dongles).

2010-06-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/vt100.c: Use local_echo in vt_init.

	* src/dial.c, src/config.c: Rename local variable local_echo to
	  local_echo_str as there's also a global variable local_echo.

2010-05-30  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/updown.c: Check for error conditions on fd of running script.
	  for minicom bug-tracker #312517, by Chris Simmonds

2010-04-25  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/updown.c: Use FHS compliant lock-file format.

2010-04-01  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in, src/Makefile.am: Add -std=gnu99 -W -Wall if using
	  gcc, fix CFLAGS usage.

2010-03-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Put 'Port %s' under gettext. By Jorma Karvonen.

	* src/config.c: Make sure the global config file is world readable,
	  Redhat patch.
	
	* src/updown.c: Removed static buffers that limit multi-file
	  zmodem functionality. (Redhat #98654)
	
	* src/vt100.c: Check vttrans to prevent segfaults with certain
	  ESC sequences. (Fedora #84129)

	* src/file.c: Fix error handling for the case when you attempt
	  to "goto" a dir that doesn't exist. (Fedora #103902)
	
	* src/file.c, src/util.c: Consider files names with spaces,
	  Fedora Patch 98655 and Debian Patch #199924.
